# openai-api

./: Cargo.toml  LICENSE  README.md
examples/: basic_chat.rs  stream_chat.rs
src/: chat.rs  chat_stream.rs  common.rs  completion.rs  embeddings.rs  lib.rs
