[package]
name = "openai-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
