[package]
name = "openai-api"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
futures-util = "0.3.28"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
reqwest-eventsource = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }

[package.metadata.release]
publish = false
push = false

